kubernetes/applications/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        ports:
        - name: http
          containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
          subPath: tv-sonarr
        - name: media
          mountPath: /tv
          subPath: Television
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: downloads
        nfs:
          server: 10.20.0.100
          path: /mnt/Taranaki/Tarriance/hopuhopu_katoa
      - name: media
        nfs:
          server: 10.20.0.100
          path: /mnt/Tongariro/Plexopathy
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8989
    targetPort: 8989
  selector:
    app: sonarr
