kubernetes/applications/media/sonarr/ingressroute-external.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-external
  namespace: media
  labels:
    app: sonarr
    access: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.shreck.io`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: external-chain
          namespace: traefik
  tls:
    secretName: shreck-io-tls
