kubernetes/applications/media/sonarr/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-internal
  namespace: media
  labels:
    app: sonarr
    access: internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.home.shreck.io`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: internal-chain
          namespace: traefik
